[package]
name = "lemmy-search"
version = "0.2.0"
edition = "2021"
authors = ["MarSara9"]

[dependencies]
env_logger = "0.10.*"
async-recursion = "1.0.*"
lazy_static = "1.4.*"
robotstxt = "0.3.*"
deadpool = "0.9.*"
deadpool-r2d2 = "0.2.*"
url = { version = "2.4.*", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = ["default"] }
reqwest = { version = "0.11.*", features = ["json"] }
tokio = { version = "1.28.*", features = ["rt-multi-thread"] }
actix-web = { version = "4.3.*", features = [] }
actix-files = "0.6.*"
async-std = { version = "1.12.*", features = [] }
futures = { version = "0.3.*", features = ["std", "async-await", "executor"] }
clokwerk = "0.4.*"
chrono = { version = "0.4.*", features = [] }
config-file = { version = "0.2.3", features = ["yaml"] }
uuid = { version = "1.3.*", features = ["v4"] }
postgres = { version = "0.19.3", features = ["with-uuid-1", "with-chrono-0_4"] }
r2d2_postgres = { version = "0.18.*", features = [] }
regex = { version  = "1.8.*", features = [] }