[package]
name = "lemmy-search"
version = "0.3.7"
edition = "2021"
authors = ["MarSara9"]

[dependencies]
env_logger = "0.10.*"
async-recursion = "1.0.*"
lazy_static = "1.4.*"
robotstxt = "0.3.*"
deadpool = "0.9.*"
deadpool-r2d2 = "0.2.*"
serde = { version = "1.0.*", features = ["derive"] }
reqwest = { version = "0.11.*", features = ["json"] }
tokio = { version = "1.29.*", features = ["rt-multi-thread", "fs"] }
actix-web = { version = "4.3.*", features = [] }
actix-files = "0.6.*"
futures = { version = "0.3.*", features = ["std", "async-await", "executor"] }
clokwerk = "0.4.*"
chrono = { version = "0.4.*", features = [] }
config-file = { version = "0.2.3", features = ["yaml"] }
uuid = { version = "1.4.*", features = ["v4"] }
postgres = { version = "0.19.*", features = ["with-uuid-1", "with-chrono-0_4"] }
r2d2_postgres = { version = "0.18.*", features = [] }
regex = { version  = "1.9.*", features = [] }