[package]
name = "lemmy-search-crawler"
version = "0.0.1"
edition = "2021"
authors = ["MarSara9"]

[dependencies]
lemmy-search-common = { workspace = true }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.4" }
